--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,5 @@
+@import 'layout.css';
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,32 +7,6 @@
 }
 
 body {
-  padding: 20px;
+  padding: 5% 10%;
   height: calc(var(--vh, 1vh) * 100);
-}
-
-#content {
-  border: 3px solid green;
-
-  height: 100%;
-}
-
-header {
-  border: 3px solid blue;
-
-  height: 20%;
-}
-
-main {
-  border: 3px solid red;
-
-  height: 80%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 3fr;
-}
-
-.column {
-  border: 1px solid green;
-
-  height: 100%;
 }
