--- a/styles/layout.css
+++ b/styles/layout.css
@@ -7,34 +7,30 @@ header {
 }
 
 main {
-  border: 3px solid red;
-
-  height: 80%;
+  height: var(--grid-width);
   display: flex;
 }
 
 #game-info {
-  border: 1px solid blue;
-  width: 60%;
+  border: 3px solid blue;
+  width: 100%;
+  height: 100%;
 }
 
 #game {
-  border: 1px solid blue;
-  width: 40%;
+  border: 3px solid blue;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 800px){
   main {
-    flex-direction: column;
+    flex-direction: column-reverse;
+    height: 80%;
   }
+}
 
-  #game-info {
-    width: 100%;
-    height: 50%;
-  }
-  
-  #game {
-    width: 100%;
-    height: 50%;
+@media (min-width: 800px) and (min-height: 1000px) {
+  main {
+    flex-direction: column-reverse;
+    height: 80%;
   }
 }
