--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,9 @@
+@import 'utils.css';
 @import 'layout.css';
+@import 'game.css';
 
 * {
-  box-sizing: border-box;
+  box-sizing:border-box;
   margin: 0;
   padding: 0;
 }
