--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,25 +1,22 @@
 #content {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
-  border: 1px solid green;
-  height: 20%;
+  flex-grow: 1;
 }
 
 main {
   height: var(--grid-width);
   display: flex;
+  gap: 30px;
 }
 
 #game-info {
-  border: 3px solid blue;
   width: 100%;
-  height: 100%;
-}
-
-#game {
-  border: 3px solid blue;
+  display: flex;
 }
 
 @media (max-width: 800px) {
@@ -31,6 +28,10 @@ main {
     flex-direction: column-reverse;
     height: 90%;
   }
+
+  #game-info {
+    height: 50%;
+  }
 }
 
 @media (min-width: 800px) and (min-height: 1000px) {
@@ -38,4 +39,13 @@ main {
     flex-direction: column-reverse;
     height: 80%;
   }
+
+  #game-info {
+    height: 50%;
+  }
+}
+
+.info-column {
+  width: calc(100% / 3);
+  height: 100%;
 }
