--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,19 @@
 @import 'utils.css';
 @import 'layout.css';
+@import 'header.css';
 @import 'game-info.css';
+@import 'column-1.css';
+@import 'column-2.css';
+@import 'column-3.css';
 @import 'game.css';
 
 * {
   box-sizing:border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Brady Bunch';
+  color: var(--blue-dark);
+  line-height: 1;
 }
 
 body {
