--- a/styles/utils.css
+++ b/styles/utils.css
@@ -1,15 +1,33 @@
 :root {
+  --blue-light: #c6eafb;
+  --blue-dark: #00aeef;
+
   --grid-width: calc(var(--vh, 1vh) * 60);
 }
 
 @media (max-width: 1100px) {
   :root {
-    --grid-width: calc(var(--vh, 1vh) * 40);
+    --grid-width: calc(var(--vh, 1vh) * 34);
   }
 }
 
 @media (max-width: 768px) {
   :root {
-    --grid-width: calc(var(--vh, 1vh) * 35);
+    --grid-width: calc(var(--vh, 1vh) * 30);
+  }
+}
+
+@font-face {
+  font-family: 'Brady Bunch';
+  src: url('../assets/fonts/brady-bunch.woff');
+}
+
+.score {
+  font-size: 4rem;
+}
+
+@media (max-width: 500px) {
+  .score {
+    font-size: 2rem;
   }
 }
