--- a/styles/pages/game-page.css
+++ b/styles/pages/game-page.css
@@ -1,14 +1,8 @@
-.content {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-header {
+#game-header {
   flex-grow: 1;
 }
 
-main {
+#game-main {
   height: var(--grid-width);
   display: flex;
   gap: 30px;
@@ -20,11 +14,11 @@ main {
 }
 
 @media (max-width: 800px) {
-  header {
+  #game-header {
     height: 10%;
   }
 
-  main {
+  #game-main {
     flex-direction: column-reverse;
     height: 90%;
   }
@@ -35,7 +29,7 @@ main {
 }
 
 @media (min-width: 800px) and (min-height: 1000px) {
-  main {
+  #game-main {
     flex-direction: column-reverse;
     height: 80%;
   }
