--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,7 @@
 @import 'utils.css';
-@import './components/content.css';
 @import './components/header.css';
 @import './components/main-button.css';
-@import './components/column-1.css';
-@import './components/column-2.css';
-@import './components/column-3.css';
-@import './components/game.css';
-@import './components/stat.css';
-
 @import './pages/game-page.css';
-@import './pages/simple-page.css';
 
 * {
   box-sizing:border-box;
@@ -39,7 +31,16 @@ body {
 .page {
   width: 100%;
   height: 100%;
-  display: none;
-  border: 3px solid var(--blue-light);
+  display: block;
+  border: 3px solid var(--blue-dark);
   padding: 1%;
+}
+
+.page > header {
+  height: 15%;
+}
+
+.page > main {
+  height: 85%;
+  border: 3px solid red;
 }
