--- a/styles/pages/game-page.css
+++ b/styles/pages/game-page.css
@@ -1,57 +1,39 @@
-#game-header {
-  margin-bottom: 5%;
-  flex: 0 0 auto;
+#game-page > main {
+  display: flex;
 }
 
-@media (max-width: 800px) or (max-height: 600px) {
-  #game-header {
-    margin-bottom: 0;
+@media (max-aspect-ratio: 1/1){
+  #game-page > main {
+    flex-direction: column-reverse;
   }
 }
 
-#game-main {
-  height: var(--grid-width);
-  display: flex;
-  gap: 30px;
-  flex: 1 0 auto;
+#game-page > main > section {
+  flex: 1;
 }
 
 #game-info {
-  width: 75%;
   display: flex;
-}
-
-@media (max-width: 700px) {
-  #game-main {
-    flex-direction: column-reverse;
-  }
-
-  #game-info {
-    height: 50%;
-    width: 100%;
-  }
-
-  #game {
-    margin-left: 0;
-  }
-}
-
-@media (min-width: 800px) and (min-height: 1000px) {
-  #game-main {
-    flex-direction: column-reverse;
-  }
-
-  #game-info {
-    height: 50%;
-    width: 100%;
-  }
-
-  #game {
-    margin-left: 0;
-  }
+  border: 3px solid red;
 }
 
 .info-column {
-  width: calc(100% / 3);
+  flex: 1;
   height: 100%;
+  border: 1px solid blue;
+}
+
+#game-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#grid {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  border: 5px solid green;
 }
