--- a/styles/pages/game-page.css
+++ b/styles/pages/game-page.css
@@ -2,14 +2,19 @@
   display: flex;
 }
 
+#game-page > main > section {
+  flex: 1;
+}
+
 @media (max-aspect-ratio: 1/1){
   #game-page > main {
     flex-direction: column-reverse;
   }
-}
 
-#game-page > main > section {
-  flex: 1;
+  #game-page > main > section {
+    height: 50%;
+  }
+  
 }
 
 #game-info {
@@ -21,6 +26,7 @@
   flex: 1;
   height: 100%;
   border: 1px solid blue;
+  padding: 1%;
 }
 
 #game-section {
@@ -36,4 +42,5 @@
   max-width: 100%;
   max-height: 100%;
   border: 5px solid green;
+  display: none;
 }
