--- a/styles/pages/game-page.css
+++ b/styles/pages/game-page.css
@@ -1,9 +1,12 @@
 #game-page > main {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #game-page > main > section {
   flex: 1;
+  height: 100%;
 }
 
 @media (max-aspect-ratio: 1/1){
@@ -12,21 +15,25 @@
   }
 
   #game-page > main > section {
+    width: 100%;
     height: 50%;
   }
-  
+
+  #game-section {
+    margin: 5% 0;
+  }
 }
 
 #game-info {
   display: flex;
-  border: 3px solid red;
+  border: 3px solid var(--blue-dark);
 }
 
 .info-column {
   flex: 1;
   height: 100%;
-  border: 1px solid blue;
-  padding: 1%;
+  padding: 3%;
+  background-color: white;
 }
 
 #game-section {
@@ -41,6 +48,6 @@
   height: 100%;
   max-width: 100%;
   max-height: 100%;
-  border: 5px solid green;
+  border: 3px solid var(--blue-dark);
   display: none;
 }
